--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Word Counter</title>
+  <title>Word Counter – Free Online Tool</title>
+  <meta name="description" content="Free online word counter and character counter to quickly measure your text. No signup required.">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -30,17 +31,22 @@
   <textarea id="text"></textarea>
 
   <div class="count">
-    Words: <span id="wordCount">0</span>
+    Words: <span id="wordCount">0</span><br>
+    Characters: <span id="charCount">0</span>
   </div>
 
   <script>
     const textarea = document.getElementById("text");
     const wordCount = document.getElementById("wordCount");
+    const charCount = document.getElementById("charCount");
 
-    textarea.addEventListener("input", () => {
-      const words = textarea.value.trim().split(/\s+/).filter(Boolean);
-      wordCount.textContent = words.length;
-    });
+  textarea.addEventListener("input", () => {
+    const text = textarea.value;
+    const words = text.trim().split(/\s+/).filter(Boolean);
+
+    wordCount.textContent = words.length;
+    charCount.textContent = text.length;
+});
   </script>
 
 </body>
